gcc/testsuite/gm2/pim/fail/highice.mod
MODULE highice ;

VAR
   a: ARRAY [0..0] OF CHAR ;
BEGIN
   a := '12'
END highice.
